--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,10 @@ Temporary Items
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
+.idea/
+out/
+*.iml
+
 # User-specific stuff:
 .idea/workspace.xml
 .idea/tasks.xml
